Nice bro, finally cleaned up the interface. Added UX features incl better navigation, fixed position menus and collapsable attachment. little more left

--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -36,19 +36,19 @@
     color: #f00046;
 }
 #fbc-loop .fbc_attachment {
-    background-color: #222;
+    background-color: #999;
     float: left;
-    width: 162px;
-    height: 162px;
-    margin: 1px;
+    width: 190px;
+    height: 190px;
+    margin: 0;
     padding: 0;
     border: 0;
     opacity: 0;
     transition: all 0.6s ease;
 }
 #fbc-react .attachment-preview {
-    width: 160px;
-    height: 160px;
+    width: 190px;
+    height: 190px;
     float: left;
     display: inline-block;
     margin: 0px;
@@ -73,16 +73,21 @@
 }
 
 #__attachments-view-fbc {
-    margin-right:350px
+    margin: 1px 0 0 0;
+}
+
+#fbc_media-sidebar {
+    display: none;
+    position: fixed;
+    top: 0;
+    right: -310px;
+    bottom: 0;
+    width: 315px;
 }
 
 #fbc_media-sidebar.media-sidebar {
-    position:fixed;
-    top:0;
-    right:0;
-    bottom:0;
-    width:350px;
-    padding:0 16px 24px;
+    width:315px;
+    padding:0 10px 24px;
     z-index:75;
     background:#f3f3f3;
     border-left:1px solid #ddd;
@@ -96,7 +101,8 @@
     display:none
 }
 #library-form .button {
-    display: block
+    display: inline-block;
+    margin-top: 20px;
 }
 
 .pinkynail,.filename new,.describe-toggle-off {
@@ -224,13 +230,17 @@ input.readonly, input[readonly], textarea.readonly, textarea[readonly] {
 	width: 250px;
 	left: -250px;
 	height: '100%';
-    top: 105px;
+    top: 90px;
 	display: inline-block;
-    position: absolute;
+    position: fixed;
 	display: none;
 	transition: all 0.3s ease;
+    bottom: 0;
 }
-#fbc-loop {  }
+#fbc-loop {
+    margin-top: 90px;
+    transition: all 0.3s ease;
+}
 #fbc-tree li {
     margin-left: 20px;
 }
@@ -241,18 +251,19 @@ input.readonly, input[readonly], textarea.readonly, textarea[readonly] {
 	display: none;
 }
 #fbc-react {
-    padding-left: 15px;
+    padding-left: 0;
 }
 #fbc-react h1 {
     text-align: center;
-    font-size: 22px;
-    position: absolute;
-    top: -15px;
-    padding: 15px 0;
+    font-size: 24px;
+    position: fixed;
+    top: 0;
+    padding: 0;
     text-align: center;
     width: 100%;
     margin-left: -220px;
     left: 0;
+    z-index: 9999;
 }
 .fullscreen {
 	position: absolute;
@@ -282,6 +293,8 @@ input.readonly, input[readonly], textarea.readonly, textarea[readonly] {
 }
 .tree {
     min-height:20px;
+    height: 100%;
+    overflow-y: scroll;
     padding: 0 10px;
     margin-bottom:20px;
     background-color:#fcfcfc;
@@ -291,6 +304,20 @@ input.readonly, input[readonly], textarea.readonly, textarea[readonly] {
     border-width: 1px 1px 1px 0;
     border-style: solid;
     border-color: #ccc;
+}
+.tree::-webkit-scrollbar-track {
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	border-radius: 10px;
+	background-color: #FCFCFC;
+}
+.tree::-webkit-scrollbar {
+	width: 6px;
+	background-color: #FCFCFC;
+}
+.tree::-webkit-scrollbar-thumb {
+	border-radius: 10px;
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+	background-color: #999;
 }
 .tree li {
     list-style-type:none;
@@ -402,13 +429,21 @@ input.readonly, input[readonly], textarea.readonly, textarea[readonly] {
 }
 
 .searchRow {
-    margin-top: 20px;
+    padding: 0 0 15px 10px;
+    position: fixed;
+    top: 0;
+    z-index: 9;
+    background: #f3f3f3;
+    width: 100%;
+    box-shadow: 0 0 5px rgba(0,0,0,0.8);
 }
 #searchForm {
     margin: 20px 0 0 110px
 }
 #searchForm input {
     width: 220px;
+    border: 1px solid #e0e0e0;
+    padding: 5px 10px;
 }
 #searchForm button {
     display: none;
